--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mi/rrweb-snapshot",
+  "name": "rrweb-snapshot",
   "version": "0.7.26",
   "description": "rrweb's component to take a snapshot of DOM, aka DOM serializer",
   "scripts": {
